"About" panel was translated into russian language.

--- a/src/org/executequery/gui/resource/licensePanelText.html
+++ b/src/org/executequery/gui/resource/licensePanelText.html
@@ -1,9 +1,13 @@
 <html>
 <body>
 <p align="center">
+    Это бесплатное программное обеспечение.<br>
+    Вы можете его распространять при определенных условиях.
+    <br>Подробности вы можете узнать в Стандартной общественной лицензии GNU.
+    <br><br>
     This is free software, and you are welcome to<br>
     redistribute it under certain conditions.
-    <br><br>See the GNU General Public License for details.<br><br>
+    <br>See the GNU General Public License for details.<br><br>
 </p>
 </body>
 </html>
